[tool.poetry]
name = "sangwon91-github-io"
version = "0.1.0"
description = ""
authors = ["Sangwon <lsw91.main@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cvmake"}]

[tool.poetry.dependencies]
python = "^3.10"
scholarly = {git = "https://github.com/scholarly-python-package/scholarly.git"}
rich = "^13.5.2"
markdown-table-generator = "^1.1.0"
jinja2 = "^3.1.2"
ipykernel = "^6.25.1"
pandas = "^2.0.3"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
